# XVM-cpp

./: CMakeLists.txt  README.md
include/: common.h
include/gc/: gc_factory.h  mark_clean.h  mark_compact.h  mark_copy.h
include/gc/interface/: garbage_collect.h
include/jni/: Handle.cpp  Handle.h  JniTools.cpp  JniTools.h  com_cover_jvm_jdk_classes_JniEnv.h  com_cover_jvm_jdk_classes_Threads.h  com_cover_jvm_jdk_classes_sun_misc_AppClassLoader.h  com_cover_jvm_jdk_classes_sun_misc_Unsafe.h
include/memory/: memory_cell.h  memory_chunk.h  memory_pool.h
share/vm/adlc/: AllStatic.cpp  AllStatic.h  CHeapObj.cpp  CHeapObj.h
share/vm/classfile/: ClassFileParser.cpp  ClassFileParser.h  ClassFileStream.cpp  ClassFileStream.h  ClassLoader.cpp  ClassLoader.h  ClassLoaderData.cpp  ClassLoaderData.h  ClassLoaderDataGraph.cpp  ClassLoaderDataGraph.h  ClassPathDirEntry.cpp  ClassPathDirEntry.h  Dictionary.cpp  Dictionary.h  Java_lang_ClassLoader.cpp  Java_lang_ClassLoader.h  StackMapTable.cpp  StackMapTable.h  SystemDictionary.cpp  SystemDictionary.h
share/vm/code/: CodeStream.cpp  CodeStream.h
share/vm/gc_interface/: CollectedHeap.cpp  CollectedHeap.h
share/vm/interpreter/: BytecodeInterpreter.cpp  BytecodeInterpreter.h
share/vm/oops/: Klass.h  (+35 more)
src/gc/: gc_factory.cpp  mark_clean.cpp  mark_compact.cpp  mark_copy.cpp
src/jni/: com_cover_jvm_jdk_classes_JniEnv.cpp  com_cover_jvm_jdk_classes_Threads.cpp  com_cover_jvm_jdk_classes_sun_misc_AppClassLoader.cpp  com_cover_jvm_jdk_classes_sun_misc_Unsafe.cpp
src/memory/: memory_cell.cpp  memory_chunk.cpp  memory_pool.cpp
(+60 files in other folders)
